2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STActor.m (-instanceVariables): Fix typo in
	method name.
	* Frameworks/StepTalk/STActor.m (-addInstanceVariable:):
	* Frameworks/StepTalk/STActor.m (-removeInstanceVariable:):
	New methods to add and remove instance variables.

	* Frameworks/StepTalk/STActor.h (-instanceVariableNames):
	* Frameworks/StepTalk/STActor.h (-setInstanceVariables:):
	* Frameworks/StepTalk/STActor.h (-instanceVariables):
	* Frameworks/StepTalk/STActor.h (-addInstanceVariable:):
	* Frameworks/StepTalk/STActor.h (-removeInstanceVariable:):
	Add methods to the public API.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/STExecutor.h:
	* Examples/Shell/STShell+output.m:
	* Examples/Shell/stshell_tool.m:
	int->NSInteger transition

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/AppKit/AppKitConstants.list:
	* Modules/AppKit/AppKitConstants.m:
	* Modules/AppKit/AppKitEvents.list:
	* Modules/AppKit/AppKitEvents.m:
	* Modules/AppKit/AppKitExceptions.m:
	* Modules/AppKit/AppKitNotifications.m:
	* Modules/AppKit/header.m:
	* Modules/Foundation/FoundationConstants.list:
	* Modules/Foundation/FoundationConstants.m:
	* Modules/Foundation/header.m:
	* Modules/GDL2/header.m:
	* Modules/SQLClient/SQLClientConstants.m:
	* Modules/SQLClient/header.m:
	* Modules/WebServices/WebServicesConstants.m:
	* Modules/WebServices/header.m:
	int->NSInteger transition

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSInvocation+additions.h:
	* Frameworks/StepTalk/NSInvocation+additions.m:
	* Frameworks/StepTalk/NSNumber+additions.h:
	* Frameworks/StepTalk/NSNumber+additions.m:
	* Frameworks/StepTalk/STActor.m:
	* Frameworks/StepTalk/STEnvironmentDescription.h:
	* Frameworks/StepTalk/STEnvironmentDescription.m:
	* Frameworks/StepTalk/STLanguageManager.m:
	* Frameworks/StepTalk/STObjCRuntime.m:
	* Frameworks/StepTalk/STScriptObject.m:
	* Frameworks/StepTalk/STStructure.h: